k8s/base/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      imagePullSecrets:
        - name: gitlab-regcred
      containers:
        - name: frontend-service
          image: registry.gitlab.com/liza.antipa/yazikochesalna/frontend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend-service
