k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-api-ingress
  namespace: messenger
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/websocket-services: messaging-service
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xn--80ajfmhmdz6cwbs0al.xn--p1ai
    secretName: messenger-tls
  rules:
  - host: xn--80ajfmhmdz6cwbs0al.xn--p1ai
    http:
      paths:
      # File Service
      - path: /api/v1/files
        pathType: Prefix
        backend:
          service:
            name: file-service
            port:
              number: 8086

      # Auth Service
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8085

      # Chat Service
      - path: /api/v1/chats
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8080

      # Message Storage Service
      - path: /api/v1/messages
        pathType: Prefix
        backend:
          service:
            name: message-storage-service
            port:
              number: 8081

      # WebSocket endpoint (Exact)
      - path: /api/v1/ws
        pathType: Exact
        backend:
          service:
            name: messaging-service
            port:
              number: 8082

      # WebSocket fallback or subpaths
      - path: /api/v1/ws/
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 8082

      # User Service
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8083
     
      # Fallback: всё остальное
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
